@@ -27,6 +27,7 @@ import com.starrocks.common.Config;
 import com.starrocks.common.util.DateUtils;
 import com.starrocks.qe.SimpleExecutor;
 import com.starrocks.server.GlobalStateMgr;
+import com.starrocks.statistic.StatisticUtils;
 import com.starrocks.statistic.StatsConstants;
 import com.starrocks.thrift.TResultBatch;
 import com.starrocks.thrift.TResultSinkType;
@@ -39,6 +40,7 @@ import org.checkerframework.checker.nullness.qual.NonNull;
 
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -46,20 +48,23 @@ import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 class SQLPlanGlobalStorage implements SQLPlanStorage {
+    private static final Logger LOG = LogManager.getLogger(SQLPlanGlobalStorage.class);
     /*
      * SPM baselines table
      * id         | bigint
+     * is_enable  | boolean
      * bind_sql   | varchar(65530)
      * bind_sql_digest | varchar(65530)
      * bind_sql_hash | bigint
      * plan_sql   | varchar(65530)
      * costs      | double
+     * query_ms   | double
+     * source     | varchar(100)
      * update_time| datetime
      */
-    private static final Logger LOG = LogManager.getLogger(SQLPlanGlobalStorage.class);
     private static final String QUERY_SQL = "SELECT * FROM " + StatsConstants.SPM_BASELINE_TABLE_NAME + " ";
     private static final String INSERT_SQL = "INSERT INTO " + StatsConstants.SPM_BASELINE_TABLE_NAME + " VALUES ";
-    private static final String DELETE_SQL = "DELETE FROM " + StatsConstants.SPM_BASELINE_TABLE_NAME + " WHERE id = ";
+    private static final String DELETE_SQL = "DELETE FROM " + StatsConstants.SPM_BASELINE_TABLE_NAME + " WHERE id IN ";
 
     // for lazy load baseline plan
     private record BaselineId(long id, long bindSQLHash) {}
@@ -90,6 +95,9 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
 
     // only show stmt used, query be directly
     public List<BaselinePlan> getAllBaselines() {
+        if (!StatisticUtils.checkStatisticTables(List.of(StatsConstants.SPM_BASELINE_TABLE_NAME))) {
+            return Collections.emptyList();
+        }
         try {
             List<TResultBatch> datas = executor.executeDQL(QUERY_SQL);
             List<BaselinePlan> bps = castToBaselinePlan(datas);
@@ -100,26 +108,44 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
             return bps;
         } catch (Exception e) {
             LOG.warn("sql plan baselines get all baseline fail", e);
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
-    public void storeBaselinePlan(BaselinePlan plan) {
+    public void storeBaselinePlan(List<BaselinePlan> plans) {
         try {
-            plan.setId(GlobalStateMgr.getCurrentState().getNextId());
-            List<String> values = Lists.newArrayList();
-            values.add(String.valueOf(plan.getId()));
-            values.add("'" + plan.getBindSql() + "'");
-            values.add("'" + plan.getBindSqlDigest() + "'");
-            values.add(String.valueOf(plan.getBindSqlHash()));
-            values.add("'" + plan.getPlanSql() + "'");
-            values.add(String.valueOf(plan.getCosts()));
-            values.add("'" + DateUtils.formatDateTimeUnix(plan.getUpdateTime()) + "'");
-            String sql = INSERT_SQL + "(" + String.join(", ", values) + ");";
-            executor.executeDML(sql);
+            if (!StatisticUtils.checkStatisticTables(List.of(StatsConstants.SPM_BASELINE_TABLE_NAME))) {
+                return;
+            }
+            StringBuilder sb = new StringBuilder();
+            sb.append(INSERT_SQL).append(" ");
+            for (BaselinePlan plan : plans) {
+                plan.setId(GlobalStateMgr.getCurrentState().getNextId());
+                List<String> values = Lists.newArrayList();
+                values.add(String.valueOf(plan.getId()));
+                values.add(plan.isEnable() ? "true" : "false");
+                values.add("'" + plan.getBindSql() + "'");
+                values.add("'" + plan.getBindSqlDigest() + "'");
+                values.add(String.valueOf(plan.getBindSqlHash()));
+                values.add("'" + plan.getPlanSql() + "'");
+                values.add(String.valueOf(plan.getCosts()));
+                values.add(String.valueOf(plan.getQueryMs()));
+                values.add("'" + plan.getSource() + "'");
+                values.add("'" + DateUtils.formatDateTimeUnix(plan.getUpdateTime()) + "'");
+                sb.append("(").append(String.join(",", values)).append("),");
+            }
+            sb.setLength(sb.length() - 1);
+            sb.append(";");
+            executor.executeDML(sb.toString());
 
-            GlobalStateMgr.getCurrentState().getEditLog().logCreateSPMBaseline(plan);
-            allBaselineIds.add(new BaselineId(plan.getId(), plan.getBindSqlHash()));
+            for (BaselinePlan plan : plans) {
+                allBaselineIds.add(new BaselineId(plan.getId(), plan.getBindSqlHash()));
+            }
+
+            BaselinePlan message = new BaselinePlan(-1, -1);
+            message.setReplayIds(plans.stream().map(BaselinePlan::getId).collect(Collectors.toList()));
+            message.setReplayBindSQLHash(plans.stream().map(BaselinePlan::getBindSqlHash).collect(Collectors.toList()));
+            GlobalStateMgr.getCurrentState().getEditLog().logCreateSPMBaseline(message);
         } catch (Exception e) {
             LOG.warn("sql plan baselines store baseline fail", e);
         }
@@ -133,17 +159,25 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
         return plans.values().stream().filter(plan -> plan.getBindSqlDigest().equals(sqlDigest)).toList();
     }
 
-    public void dropBaselinePlan(long baseLineId) {
+    public void dropBaselinePlan(List<Long> baseLineIds) {
         try {
-            List<BaselineId> ids = allBaselineIds.stream().filter(b -> b.id == baseLineId).toList();
+            List<BaselineId> ids = allBaselineIds.stream().filter(b -> baseLineIds.contains(b.id)).toList();
             Preconditions.checkState(ids.size() == 1);
+
             for (BaselineId id : ids) {
-                executor.executeDML(DELETE_SQL + id.id + ";");
-                GlobalStateMgr.getCurrentState().getEditLog()
-                        .logDropSPMBaseline(new BaselinePlan(id.id, id.bindSQLHash));
                 allBaselineIds.remove(id);
                 cache.invalidate(id.id);
             }
+
+            if (!StatisticUtils.checkStatisticTables(List.of(StatsConstants.SPM_BASELINE_TABLE_NAME))) {
+                return;
+            }
+
+            String s = ids.stream().map(BaselineId::id).map(String::valueOf).collect(Collectors.joining(","));
+            executor.executeDML(DELETE_SQL + "(" + s + ");");
+            BaselinePlan p = new BaselinePlan(-1, -1);
+            p.setReplayIds(ids.stream().map(BaselineId::id).collect(Collectors.toList()));
+            GlobalStateMgr.getCurrentState().getEditLog().logDropSPMBaseline(p);
         } catch (Exception e) {
             LOG.warn("sql plan baselines drop baseline fail", e);
         }
@@ -163,19 +197,27 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
                 /*
                  * SPM baselines table
                  * 0.id         | bigint
-                 * 1.bind_sql   | varchar(65530)
-                 * 2.bind_sql_digest | varchar(65530)
-                 * 3.bind_sql_hash | bigint
-                 * 4.plan_sql   | varchar(65530)
-                 * 5.costs      | double
-                 * 6.update_time| datetime
+                 * 1.enable     | boolean
+                 * 2.bind_sql   | varchar(65530)
+                 * 3.bind_sql_digest | varchar(65530)
+                 * 4.bind_sql_hash | bigint
+                 * 5.plan_sql   | varchar(65530)
+                 * 6.costs      | double
+                 * 7.query_ms   | double
+                 * 8.source     | varchar(100)
+                 * 9.update_time| datetime
                  */
                 JsonElement obj = JsonParser.parseString(jsonString);
                 JsonArray data = obj.getAsJsonObject().get("data").getAsJsonArray();
-                BaselinePlan bp = new BaselinePlan(true, data.get(1).getAsString(), data.get(2).getAsString(),
-                        data.get(3).getAsLong(), data.get(4).getAsString(), data.get(5).getAsDouble(),
-                        DateUtils.parseUnixDateTime(data.get(6).getAsString()));
+                BaselinePlan bp =
+                        new BaselinePlan(data.get(2).getAsString(), data.get(3).getAsString(), data.get(4).getAsLong(),
+                                data.get(5).getAsString(), data.get(6).getAsDouble());
                 bp.setId(data.get(0).getAsLong());
+                bp.setGlobal(true);
+                bp.setEnable(data.get(1).getAsInt() == 1);
+                bp.setQueryMs(data.get(7).getAsDouble());
+                bp.setSource(data.get(8).getAsString());
+                bp.setUpdateTime(DateUtils.parseUnixDateTime(data.get(9).getAsString()));
                 result.add(bp);
             }
         }
@@ -185,9 +227,11 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
     @Override
     public void replayBaselinePlan(BaselinePlan plan, boolean isCreate) {
         if (isCreate) {
-            allBaselineIds.add(new BaselineId(plan.getId(), plan.getBindSqlHash()));
+            for (int i = 0; i < plan.getReplayIds().size(); i++) {
+                allBaselineIds.add(new BaselineId(plan.getReplayIds().get(i), plan.getReplayBindSQLHash().get(i)));
+            }
         } else {
-            allBaselineIds.removeIf(b -> b.id == plan.getId());
+            allBaselineIds.removeIf(b -> plan.getReplayIds().contains(b.id));
         }
     }
 
@@ -195,6 +239,9 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
         @Override
         public BaselinePlan load(@NonNull Long key) {
             try {
+                if (!StatisticUtils.checkStatisticTables(List.of(StatsConstants.SPM_BASELINE_TABLE_NAME))) {
+                    return null;
+                }
                 List<TResultBatch> datas = executor.executeDQL(QUERY_SQL + "WHERE id = " + key + ";");
                 if (!datas.isEmpty()) {
                     return castToBaselinePlan(datas).get(0);
@@ -208,6 +255,9 @@ class SQLPlanGlobalStorage implements SQLPlanStorage {
         @NonNull
         @Override
         public Map<Long, BaselinePlan> loadAll(Iterable<? extends Long> keys) {
+            if (!StatisticUtils.checkStatisticTables(List.of(StatsConstants.SPM_BASELINE_TABLE_NAME))) {
+                return Map.of();
+            }
             List<String> ks = Lists.newArrayList();
             keys.forEach(key -> ks.add(String.valueOf(key)));
             try {
